# zakodb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/zakodb/: _io.pyi  _io.pyx  _utils.py  const.py  core.py  exc.py  hasher.py  io.c  io.h  query.py  types.py  utils.py
