[project]
name = "zakodb"
version = "0.1.0"
description = "A lightweight database."
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
]
dependencies = ["cython>=3.0.12"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
xxhash = [
    "xxhash~=3.5.0",
]
cityhash = [
    "cityhash==0.4.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zakodb" = ["py.typed"]

[tool.setuptools]
ext-modules = [
  {name = "zakodb._io", sources = ["src/zakodb/_io.pyx"]}
]

[build-system]
requires = ["setuptools", "Cython", "pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
is-purelib = false

[tool.black]
line-length = 100
exclude = ".venv"

[tool.isort]
line_length = 100
skip = [".venv"]
profile = "black"
